--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,3 +8,35 @@
   align-items: center;
   height: 100vh;
 }
+
+.chat__form {
+  position: relative;
+}
+
+.form-field {
+  width: 300px;
+  height: 50px;
+  padding-right: 50px;
+}
+
+.chat__btn {
+  position: absolute !important;
+  top: 5px;
+  right: 5px;
+}
+
+.chat__loading {
+  position: absolute !important;
+  top: 5px;
+  right: 5px;
+  color: #00ce22 !important;
+}
+
+.navigation-icon {
+  transform: rotate(90deg);
+  color: #00ce22;
+}
+
+.error-text {
+  color: #bb0000;
+}
