--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,11 +2,37 @@
   box-sizing: border-box;
 }
 
-.app {
+.chat {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  gap: 2rem;
+}
+
+.chat__list {
+  display: flex;
+  overflow-y: scroll;
+  flex-direction: column;
+  gap: 2rem;
+  height: 500px;
+  width: 400px;
+}
+
+.chat__list::-webkit-scrollbar {
+  display: none;
+}
+
+.chat__message {
+  width: 300px;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+.chat__text {
+  margin: 0;
 }
 
 .chat__form {
@@ -14,7 +40,7 @@
 }
 
 .form-field {
-  width: 300px;
+  width: 400px;
   height: 50px;
   padding-right: 50px;
 }
